# robot-grasp

./: .gitignore  .gitmodules  README.md  autobot.md  frankapy_env.yml  pyproject.toml  requirements.txt
.github/workflows/: run-tests.yaml
configs/: _logging.yaml
configs/conda_envs/: anygrasp_env.yml  contact_graspnet_env.yml  frankapy_env.yml  main_env.yml
configs/conda_envs_setup/: anygrasp_env.yml  contact_graspnet_env.yml  main_env.yml
data/camera_calibration/: cam0_calibration.npz  cam0_calibration_old.npz  cam0_data.pkl  camera2robot.npz  robot2camera.npz
data/contact_graspnet_pipeline_results/: affordance_mask.npy  contact_graspnet_results.npz  grounded_sam_seg_mug.json  grounded_sam_seg_robot.json
data/contact_graspnet_pipeline_results_1/: affordance_mask.npy  grounded_sam_seg_mug.json  grounded_sam_seg_robot.json
data/contact_graspnet_pipeline_results_20241126_145733/: affordance_mask.npy  contact_graspnet_results.npz  grounded_sam_seg_mug.json  grounded_sam_seg_robot.json
data/contact_graspnet_pipeline_results_20241126_150434/: affordance_mask.npy  contact_graspnet_results.npz  grounded_sam_seg_mug.json  grounded_sam_seg_robot.json
data/contact_graspnet_pipeline_results_20241126_150530/: affordance_mask.npy  contact_graspnet_results.npz  grounded_sam_seg_mug.json  grounded_sam_seg_robot.json
data/contact_graspnet_pipeline_results_for_red_mug/: affordance_mask.npy  contact_graspnet_results.npy.npz  contact_graspnet_results.npz  grounded_sam_seg_mug.json  grounded_sam_seg_robot.json
data/pcdrgb/: pcdrgb.npy
data/pipeline_results_for_cup_and_holder/: grounded_sam2_local_image_demo_results.json  grounded_sam_mask.npy  zeroed_affordance_mask.npy
data/pipeline_results_for_red_mug/: affordance_mask.npy  contact_graspnet_results.npy.npz  grounded_sam_seg_mug.json  grounded_sam_seg_robot.json  rgb.npy
data/pipeline_results_for_robot_and_cup/: affordance_mask.npy  grounded_sam_seg_mug.json  grounded_sam_seg_robot.json  zeroed_affordance_mask.npy
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: contact_graspnet_experimentation.ipynb  contact_graspnet_to_rgbdk.ipynb  pipeline_testings.ipynb  reading_camera_calibration_data.ipynb  reading_npz.ipynb  reading_rdgbk_data.ipynb  tests.ipynb
scripts/: capture_video_demos.sh  eval.py  generate_mask_references.sh  grasping_predictor_and_executor.sh  installation.sh  mkv_to_depth_npy.sh  perform_calibration.sh  perform_callibration.sh  pipeline.sh  pipeline_anygrasp.sh  pipeline_contact_graspnet.sh  pipeline_mask_references.sh  pipeline_process_demos_for_taxposed.sh  pipeline_process_demos_for_taxposed_custom_using_handtracking.sh  pipeline_process_demos_for_taxposed_using_handtracking.sh  reset_franka.sh  test.sh  train.py
scripts/utils/: affordance.npy  capture_rgbdk.py  capture_video.py  collect_calibration_data.py  contact_graspnet_input_preprocessing.py  create_image_with_segmented_object.py  execute_contact_graspnet_grasps.py  extract_clear_and_grasping_frames.py  extract_key_frames.py  generate_affordance_mask.py  generate_affordance_reference.py  get_camera_inputs.py  get_eef_poses.py  hand_visualizer.py  marker_detection.py  mkv_to_depth_npy.py  mkv_to_mp4.py  pcd_obs_env.py  rgb_depth_to_rgbdk.py  rgbdk_to_rgb.py  rgbds_to_rgbdks.py  rgdb_to_rgb.py  robot_controller.py  segmented_transformation_matrix.npy  solve_calibration.py  taxposed_input_processing.py  taxposed_train_data_processing.py  test.py  tests.json  transformation_experimentation.py  visualize_best_grasp_and_final_robot_location.py  (+5 more)
(+20 files in other folders)
