[project]
name = "python-ml-project-template"
version = "0.1.0"
description = "A Python Package Template"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
authors = [
  {email = "jsuner@andrew.cmu.edu", name = "Jacinto Suner"},
  {email = "baeisner@andrew.cmu.edu", name = "Ben Eisner"}
]
dependencies = [
  "asttokens == 2.4.1",
  "build == 1.2.2",
  "CacheControl == 0.14.0",
  "certifi == 2024.8.30",
  "cffi == 1.17.1",
  "charset-normalizer == 3.3.2",
  "cleo == 2.1.0",
  "comm == 0.2.2",
  "crashtest == 0.4.1",
  "cryptography == 43.0.1",
  "debugpy == 1.8.6",
  "decorator == 5.1.1",
  "distlib == 0.3.8",
  "dulwich == 0.21.7",
  "exceptiongroup == 1.2.2",
  "executing == 2.1.0",
  "fastjsonschema == 2.20.0",
  "filelock == 3.16.1",
  "idna == 3.10",
  "imageio == 2.35.1",
  "importlib_metadata == 8.5.0",
  "installer == 0.7.0",
  "ipykernel == 6.29.5",
  "ipython == 8.28.0",
  "ipywidgets == 8.1.5",
  "jaraco.classes == 3.4.0",
  "jedi == 0.19.1",
  "jeepney == 0.8.0",
  "joblib == 1.4.2",
  "jupyter_client == 8.6.3",
  "jupyter_core == 5.7.2",
  "jupyterlab_widgets == 3.0.13",
  "keyring == 24.3.1",
  "lazy_loader == 0.4",
  "matplotlib-inline == 0.1.7",
  "more-itertools == 10.5.0",
  "msgpack == 1.1.0",
  "nest-asyncio == 1.6.0",
  "networkx == 3.3",
  "numpy == 1.26.4",
  "packaging == 24.1",
  "parso == 0.8.4",
  "pexpect == 4.9.0",
  "pillow == 10.4.0",
  "pkginfo == 1.11.1",
  "platformdirs == 4.3.6",
  "poetry == 1.8.3",
  "poetry-core == 1.9.0",
  "poetry-plugin-export == 1.8.0",
  "prompt_toolkit == 3.0.48",
  "psutil == 6.0.0",
  "ptyprocess == 0.7.0",
  "pure_eval == 0.2.3",
  "pycparser == 2.22",
  "Pygments == 2.18.0",
  "pyproject_hooks == 1.2.0",
  "python-dateutil == 2.9.0.post0",
  "pyzmq == 26.2.0",
  "RapidFuzz == 3.10.0",
  "requests == 2.32.3",
  "requests-toolbelt == 1.0.0",
  "scikit-image == 0.24.0",
  "scikit-learn == 1.5.2",
  "scipy == 1.14.1",
  "SecretStorage == 3.3.3",
  "shellingham == 1.5.4",
  "six == 1.16.0",
  "stack-data == 0.6.3",
  "threadpoolctl == 3.5.0",
  "tifffile == 2024.9.20",
  "tomli == 2.0.2",
  "tomlkit == 0.13.2",
  "tornado == 6.4.1",
  "traitlets == 5.14.3",
  "trove-classifiers == 2024.9.12",
  "typing_extensions == 4.12.2",
  "urllib3 == 2.2.3",
  "virtualenv == 20.26.6",
  "wcwidth == 0.2.13",
  "widgetsnbextension == 4.0.13",
  "zipp == 3.20.2",
]

[build-system]
requires = [
  "setuptools >= 62.3.2",
  "setuptools-scm",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
develop = [
  "autoflake == 2.1.1",
  "black == 23.3.0",
  "isort == 5.12.0",
  "mypy == 1.3.0",
  "pandas-stubs == 2.0.2.230605",
  "pylint == 2.17.4",
  "pytest == 7.3.2",
  "pre-commit == 3.3.3",
]
notebooks = [
  "jupyter",
]
build_docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
]

# This is required to allow us to have notebooks/ at the top level.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_ml_project_template = ["py.typed"]

[tool.isort]
profile = "black"
known_third_party = "wandb"

[tool.mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "torchvision.*",
]
ignore_missing_imports = true

[tool.pylint]
known-third-party = "wandb"

[tool.pylint.TYPECHECK]
generated-members = 'torch.*'
